<resources>

    <string name="app_name">AutomacaoResidencial</string>
    <string name="menu_settings">Settings</string>
    
    <!-- Botoes Label -->
    <string name="ativar">Ativar</string>
    <string name="desativar">Desativar</string>
    
    <string name="pin02">Jardim</string>
    <string name="pin05">WC</string>
    <string name="pin06">Cozinha</string>
    <string name="pin08">Sala de TV</string>
    
    <string name="server">Servidor</string>
    <string name="location">192.168.10.20</string>
</resources>