<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TableRow
        android:id="@+id/rowJardim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin02"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/pin02on"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ativar" />

        <Button
            android:id="@+id/pin02off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desativar" />
    </TableRow>

    <TableRow
        android:id="@+id/rowWC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin05"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/pin05on"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ativar" />

        <Button
            android:id="@+id/pin05off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desativar" />
    </TableRow>

    <TableRow
        android:id="@+id/rowCozinha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin06"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/pin06on"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ativar" />

        <Button
            android:id="@+id/pin06off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desativar" />
    </TableRow>

    <TableRow
        android:id="@+id/rowSalaTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin08"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/pin08on"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ativar" />

        <Button
            android:id="@+id/pin08off"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/desativar" />
    </TableRow>

</TableLayout>